updated eclipse build script